p3/argocd/deploy_argo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo
spec:
  selector:
    matchLabels:
      app: argo
  replicas: 1
  template:
    metadata:
      labels:
        app: argo
    spec:
      containers:
      - name: argo
        image: chainguard/argocd:latest
        ports:
        - containerPort: 8080
