p3/argocd/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: argo
