p3/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/spec.ingressClassName: "traefik" 
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: argo-cd.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: argo-service
            port:
              number: 80
